# SmartRAG

./: .dockerignore  .env  .gitignore  Dockerfile  docker_deploy.txt  env_template.txt  main.py  pyproject.toml  requirements.txt  start.sh
src/agents/config/: agent_settings.py
src/agents_src/: crew.py  crew_test.py
src/agents_src/agents/: QA_agent.py
src/agents_src/config/: agent_settings.py
src/agents_src/llm/: config.py  get_llm.py
src/agents_src/tasks/: QA_task.py
src/agents_src/tools/: rag_qa.py  web_research.py
src/backend/: main.py
src/backend/api/: chat.py
src/backend/config/: settings.py
src/backend/services/: chat_service.py
src/frontend/: app.py
src/frontend/config/: settings.py
src/rag/: ingest.py
src/rag/config/: rag_settings.py
