[project]
name = "smartrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.1",
    "crewai>=0.203.0",
    "dotenv>=0.9.9",
    "fastapi>=0.118.2",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "tavily-python>=0.7.12",
    "uvicorn>=0.37.0",
]
